BATTLE : Gestion des PLAYERS

--- a/src/pages/index/page.html
+++ b/src/pages/index/page.html
@@ -3,6 +3,6 @@
 
 {% block main_content %}
     {% for fw_scenes in FW.content.scenes %}
-        {% include "index/scenes/" + fw_scenes %}
+        {% include "index/_scenes/" + fw_scenes %}
     {% endfor %}
 {% endblock %}
