Gestion de l'animation

--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -10,12 +10,15 @@
         </div>
         <div id="TXT__Battle_Timer" class="outputText Battle__HUD_Timer">∞</div>
     </div>
-    <div class="Battle__Area">
+    <div id="LAY__Battle_Area" class="outputLayer Battle__Area">
         <div class="Battle__Area_Blur --left"></div>
         <div class="Battle__Area_Blur --right"></div>
 
         <div id="LAY__Battle_Character_" class="outputLayer Battle__Character">
             <img id="SPT__Battle_Character_Sprite_" class="outputSprite --change Battle__Character_Sprite" />
+            <div id="LAY__Battle_Character_HurtBox_" class="outputLayer --change Battle__Character_HurtBox"></div>
+            <div id="LAY__Battle_Character_HitBox_" class="outputLayer --change Battle__Character_HitBox"></div>
+            <div id="LAY__Battle_Character_PositionBox_" class="outputLayer --change Battle__Character_PositionBox"></div>
         </div>
     </div>
 </section>
