--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -11,8 +11,12 @@
         <div id="TXT__Battle_Timer" class="outputText Battle__HUD_Timer">∞</div>
     </div>
     <div id="LAY__Battle_Area" class="outputLayer Battle__Area">
-        <div class="Battle__Area_Blur --left"></div>
-        <div class="Battle__Area_Blur --right"></div>
+        <div class="Battle__Area_Blur --left">
+            <div id="LAY__Battle_History_1" class="outputLayer Battle__History"></div>
+        </div>
+        <div class="Battle__Area_Blur --right">
+            <div id="LAY__Battle_History_2" class="outputLayer Battle__History"></div>
+        </div>
 
         <div id="LAY__Battle_Character_" class="outputLayer Battle__Character">
             <img id="SPT__Battle_Character_Sprite_" class="outputSprite --change Battle__Character_Sprite" />
