--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -19,10 +19,11 @@
         </div>
 
         <div id="LAY__Battle_Character_" class="outputLayer Battle__Character">
-            <img id="SPT__Battle_Character_Sprite_" class="outputSprite --change Battle__Character_Sprite" />
-            <div id="LAY__Battle_Character_HurtBox_" class="outputLayer --change Battle__Character_HurtBox"></div>
-            <div id="LAY__Battle_Character_HitBox_" class="outputLayer --change Battle__Character_HitBox"></div>
-            <div id="LAY__Battle_Character_PositionBox_" class="outputLayer --change Battle__Character_PositionBox"></div>
+            <img id="SPT__Battle_Character_Sprite_" class="outputSprite --change Battle__Character_Sprite" /><!--
+            --><div id="LAY__Battle_Character_HurtBox_" class="outputLayer --change Battle__Character_HurtBox"></div><!--
+            --><div id="LAY__Battle_Character_HitBox_" class="outputLayer --change Battle__Character_HitBox"></div><!--
+            --><div id="LAY__Battle_Character_PositionBox_" class="outputLayer --change Battle__Character_PositionBox"></div><!--
+            --><div id="LAY__Battle_Character_Animation_" class="outputLayer --change Battle__Character_Animation"></div>
         </div>
     </div>
 </section>
