--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -6,6 +6,7 @@
                 <div id="LAY__Battle_HUD_Bar_" class="outputLayer --change Battle__HUD_Character_Bars"></div>
                 <h2 id="TXT__Battle_HUD_Name_" class="outputText --change Battle__HUD_Character_Name"></h2>
                 <h3 id="TXT__Battle_HUD_Number_" class="outputText --change Battle__HUD_Character_Number"></h3>
+                <div id="LAY__Battle_HUD_Animation_" class="outputLayer --change Battle__HUD_Animation"></div>
             </div>
         </div>
         <div id="TXT__Battle_Timer" class="outputText Battle__HUD_Timer">∞</div>
@@ -19,11 +20,10 @@
         </div>
 
         <div id="LAY__Battle_Character_" class="outputLayer Battle__Character">
-            <img id="SPT__Battle_Character_Sprite_" class="outputSprite --change Battle__Character_Sprite" /><!--
-            --><div id="LAY__Battle_Character_HurtBox_" class="outputLayer --change Battle__Character_HurtBox"></div><!--
-            --><div id="LAY__Battle_Character_HitBox_" class="outputLayer --change Battle__Character_HitBox"></div><!--
-            --><div id="LAY__Battle_Character_PositionBox_" class="outputLayer --change Battle__Character_PositionBox"></div><!--
-            --><div id="LAY__Battle_Character_Animation_" class="outputLayer --change Battle__Character_Animation"></div>
+            <img id="SPT__Battle_Character_Sprite_" class="outputSprite --change Battle__Character_Sprite" />
+            <div id="LAY__Battle_Character_HurtBox_" class="outputLayer --change Battle__Character_HurtBox"></div>
+            <div id="LAY__Battle_Character_HitBox_" class="outputLayer --change Battle__Character_HitBox"></div>
+            <div id="LAY__Battle_Character_PositionBox_" class="outputLayer --change Battle__Character_PositionBox"></div>
         </div>
     </div>
 </section>
