--- a/src/pages/index/_scenes/menu.html
+++ b/src/pages/index/_scenes/menu.html
@@ -1,5 +1,5 @@
 <section id="CTX__Menu" class="outputContext">
-    <h1>DBVersus</h1>
+    <h1>DBZ-Versus</h1>
     <nav id="LAY__Menu" class="outputLayer">
         <ul>
             <li id="TXT__Menu_Versus" class="outputText">Versus</li>
