Ajout Scene INIT Gestion INIT Settings

--- a/src/pages/index/_scenes/initialize.html
+++ b/src/pages/index/_scenes/initialize.html
@@ -1,4 +1,6 @@
 <section id="CTX__Initialize" class="outputContext">
     <h1>DBZ-Versus</h1>
-    <h2 id="TXT__Initialize" class="outputText">Initialize ...</h2>
+    <div id="LAY__InitializeStep" class="outputLayer">
+        <span class="outputText">Initialize</span>
+    </div>
 </section>
