--- a/src/pages/index/_scenes/settings.html
+++ b/src/pages/index/_scenes/settings.html
@@ -1,4 +1,4 @@
-<section id="CTX__Setting" class="outputContext">
+<section id="CTX__Settings" class="outputContext">
     <h1>Setting</h1>
     <div class="Setting__Players">
         <div id="LAY__Setting_Player_" class="outputLayer Setting__Player">
