Optimisation BATTLE et Menu en TRAINING

--- a/src/pages/index/_scenes/menu.html
+++ b/src/pages/index/_scenes/menu.html
@@ -4,7 +4,7 @@
         <ul>
             <li id="TXT__Menu_Versus" class="outputText">Versus</li>
             <li id="TXT__Menu_Training" class="outputText">Training</li>
-            <li id="TXT__Menu_Setting" class="outputText">Setting</li>
+            <li id="TXT__Menu_Setting" class="outputText">Settings</li>
         </ul>
     </nav>
 </section>
