--- a/src/pages/index/_scenes/settings.html
+++ b/src/pages/index/_scenes/settings.html
@@ -1,16 +1,16 @@
 <section id="CTX__Settings" class="outputContext">
-    <h1>Setting</h1>
-    <div class="Setting__Players">
-        <div id="LAY__Setting_Player_" class="outputLayer Setting__Player">
-            <h2 class="Setting__Player_Number">Player #</h2>
-            <ul class="Setting__Buttons"></ul>
-            <ul class="Setting__Actions">
-                <li id="TXT__Setting_Return_" class="outputText --change">Return</li>
+    <h1>Settings</h1>
+    <div class="Settings__Players">
+        <div id="LAY__Settings_Player_" class="outputLayer Settings__Player">
+            <h2 class="Settings__Player_Number">Player #</h2>
+            <ul class="Settings__Buttons"></ul>
+            <ul class="Settings__Actions">
+                <li id="TXT__Settings_Return_" class="outputText --change">Return</li>
             </ul>
         </div>
-        <li id="LAY__Setting_Button_" class="outputLayer Setting__Button">
-            <span class="Setting__Button_Name"></span>
-            <span class="outputText Setting__Button_Key"></span>
+        <li id="LAY__Settings_Button_" class="outputLayer Settings__Button">
+            <span class="Settings__Button_Name"></span>
+            <span class="outputText Settings__Button_Key"></span>
         </li>
     </div>
 </section>
