--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -2,6 +2,7 @@
     
     <div class="Battle__Interface">
         <div class="Battle__Interface_Wrapper">
+
             <div class="Battle__HUDs">
                 <div id="LAY__Battle_HUD_" class="outputLayer Battle__HUD">
                     <img id="SPT__Battle_HUD_Sprite_" class="outputSprite --change Battle__HUD_Sprite" />
@@ -9,11 +10,11 @@
                         <div id="LAY__Battle_HUD_Bar_" class="outputLayer --change Battle__HUD_Character_Bars"></div>
                         <h2 id="TXT__Battle_HUD_Name_" class="outputText --change Battle__HUD_Character_Name"></h2>
                         <h3 id="TXT__Battle_HUD_Number_" class="outputText --change Battle__HUD_Character_Number"></h3>
-                        <div id="LAY__Battle_HUD_Animation_" class="outputLayer --change Battle__HUD_Animation"></div>
+                        <div id="LAY__Training_Animation_" class="outputLayer --change Training__Animation"></div>
                     </div>
                 </div>
             </div>
-            <div id="LAY__Battle_Info" class="outputLayer Battle__Info">
+            <div class="Battle__Info">
                 <img id="SPT__Battle_Info_Sprite" class="outputSprite Battle__Info_Sprite" />
                 <span id="TXT__Battle_Info_Text" class="outputText Battle__Info_Text --text-border">
             </div>
@@ -21,22 +22,24 @@
                 <span id="TXT__Battle_Combo_Text_2" class="outputText Battle__Combo_Text --text-border"></span>
                 <span id="TXT__Battle_Combo_Text_1" class="outputText Battle__Combo_Text --text-border"></span>
             </div>
+
+            {% include "index/_scenes/_training.html" %}
         </div>
     </div>
 
     <div id="LAY__Battle_Area" class="outputLayer Battle__Area">
         <div class="Battle__Area_Blur --left">
-            <div id="LAY__Battle_History_1" class="outputLayer Battle__History"></div>
+            <div id="LAY__Training_History_1" class="outputLayer Training__History"></div>
         </div>
         <div class="Battle__Area_Blur --right">
-            <div id="LAY__Battle_History_2" class="outputLayer Battle__History"></div>
+            <div id="LAY__Training_History_2" class="outputLayer Training__History"></div>
         </div>
 
         <div id="LAY__Battle_Character_" class="outputLayer Battle__Character">
             <img id="SPT__Battle_Character_Sprite_" class="outputSprite --change Battle__Character_Sprite" />
-            <div id="LAY__Battle_Character_HurtBox_" class="outputLayer --change Battle__Character_HurtBox"></div>
-            <div id="LAY__Battle_Character_HitBox_" class="outputLayer --change Battle__Character_HitBox"></div>
-            <div id="LAY__Battle_Character_PositionBox_" class="outputLayer --change Battle__Character_PositionBox"></div>
+            <div id="LAY__Training_HurtBox_" class="outputLayer --change Training__HurtBox"></div>
+            <div id="LAY__Training_HitBox_" class="outputLayer --change Training__HitBox"></div>
+            <div id="LAY__Training_PositionBox_" class="outputLayer --change Training__PositionBox"></div>
         </div>
     </div>
 </section>
