Gestion Menu Display en TRAINING

--- a/src/pages/index/_scenes/_training.html
+++ b/src/pages/index/_scenes/_training.html
@@ -1,10 +1,28 @@
 <section class="Training__Menu">
-    <nav id="LAY__Training_Menu_Primary" class="outputLayer Menu__Layer Training__Menu_Primary">
+    <nav id="LAY__Training_Menu_Principal" class="outputLayer Menu__Layer Training__Menu_Principal">
         <ul>
             <li id="TXT__Training_Menu_Parameters" class="outputText disable">Parameters</li>
-            <li id="TXT__Training_Menu_Display" class="outputText disable">Display</li>
+            <li id="TXT__Training_Menu_Display" class="outputText">Display</li>
             <li id="TXT__Training_Menu_Continue" class="outputText">Continue</li>
             <li id="TXT__Training_Menu_Quit" class="outputText">Quit</li>
+        </ul>
+    </nav>
+
+    <nav id="LAY__Training_Menu_Display" class="outputLayer Menu__Layer Training__Menu_Display">
+        <ul>
+            <li id="LAY__Training_Menu_Display_Input" class="outputLayer Training__Button">
+                <span>Inputs history</span>
+                <span class="outputText"></span>
+            </li>
+            <li id="LAY__Training_Menu_Display_Box" class="outputLayer Training__Button">
+                <span>Box visibility</span>
+                <span class="outputText"></span>
+            </li>
+            <li id="LAY__Training_Menu_Display_Animations" class="outputLayer Training__Button">
+                <span>Animations timeline</span>
+                <span class="outputText"></span>
+            </li>
+            <li id="LAY__Training_Menu_Display_Return" class="outputText">Return</li>
         </ul>
     </nav>
 </section>
