Gestion TRAINING avec FrameRate

--- a/src/pages/index/_scenes/_training.html
+++ b/src/pages/index/_scenes/_training.html
@@ -22,6 +22,10 @@
                 <span>Animations timeline</span>
                 <span class="outputText"></span>
             </li>
+            <li id="LAY__Training_Menu_Display_Framerate" class="outputLayer Training__Button">
+                <span>Framerate</span>
+                <span class="outputText"></span>
+            </li>
             <li id="LAY__Training_Menu_Display_Return" class="outputText">Return</li>
         </ul>
     </nav>
