Gestion Menu PARAMETERS en TRAINING

--- a/src/pages/index/_scenes/_training.html
+++ b/src/pages/index/_scenes/_training.html
@@ -1,10 +1,33 @@
 <section class="Training__Menu">
     <nav id="LAY__Training_Menu_Principal" class="outputLayer Menu__Layer Training__Menu_Principal">
         <ul>
-            <li id="TXT__Training_Menu_Parameters" class="outputText disable">Parameters</li>
+            <li id="TXT__Training_Menu_Parameters" class="outputText">Parameters</li>
             <li id="TXT__Training_Menu_Display" class="outputText">Display</li>
+        </ul>
+        <ul>
             <li id="TXT__Training_Menu_Continue" class="outputText">Continue</li>
             <li id="TXT__Training_Menu_Quit" class="outputText">Quit</li>
+        </ul>
+    </nav>
+
+    <nav id="LAY__Training_Menu_Parameters" class="outputLayer Menu__Layer Training__Menu_Parameters">
+        <ul id="LAY__Training_Menu_Parameters_Player" class="outputLayer">
+            <li class="Training__Menu_Parameters_Number">Player #</li>
+            <li id="LAY__Training_Menu_Parameters_LifeKi_" class="outputLayer --change Training__Button">
+                <span>Life / Ki</span>
+                <span class="outputText --change"></span>
+            </li>
+            <li id="LAY__Training_Menu_Parameters_RegenLife_" class="outputLayer --change Training__Button">
+                <span>Regenerate Life</span>
+                <span class="outputText --change"></span>
+            </li>
+            <li id="LAY__Training_Menu_Parameters_RegenKi_" class="outputLayer --change Training__Button">
+                <span>Regenerate Ki</span>
+                <span class="outputText --change"></span>
+            </li>
+        </ul>
+        <ul class="Training__Menu_Parameters_Return">
+            <li id="LAY__Training_Menu_Parameters_Return" class="outputText --outputCreated">Return</li>
         </ul>
     </nav>
 
@@ -26,7 +49,9 @@
                 <span>Framerate</span>
                 <span class="outputText"></span>
             </li>
-            <li id="LAY__Training_Menu_Display_Return" class="outputText">Return</li>
+        </ul>
+        <ul>
+            <li id="LAY__Training_Menu_Display_Return" class="outputText --outputCreated">Return</li>
         </ul>
     </nav>
 </section>
