Affichage de la version

--- a/src/pages/index/_scenes/initialize.html
+++ b/src/pages/index/_scenes/initialize.html
@@ -1,5 +1,8 @@
 <section id="CTX__Initialize" class="outputContext">
-    <h1>DBZ-Versus</h1>
+    <h1>
+        DBZ-Versus
+        <span>{{ FW.version }}.{{ FW.date }}.{{ FW.time }}</span>
+    </h1>
     <div id="LAY__InitializeStep" class="outputLayer">
         <span class="outputText">Initialize</span>
     </div>
