Guard Reject helper menu

--- a/src/pages/index/page.html
+++ b/src/pages/index/page.html
@@ -5,4 +5,7 @@
     {% for fw_scenes in FW.content.scenes %}
         {% include "index/_scenes/" + fw_scenes %}
     {% endfor %}
+    <section id="LAY__Helper" class="outputLayer Helper__Layer">
+        <div id="LAY__Helper_Wrapper" class="outputLayer Helper__Wrapper"></div>
+    </section>
 {% endblock %}
