--- a/src/pages/index/_scenes/loading.html
+++ b/src/pages/index/_scenes/loading.html
@@ -1,3 +1,7 @@
 <section id="CTX__Loading" class="outputContext">
-    <h1>Loading ...</h1>
+    <h1>
+        DBZ-Versus
+        <span>{{ FW.version }}.{{ FW.date }}.{{ FW.time }}</span>
+    </h1>
+    <div id="LAY__LoadingStep" class="outputLayer"></div>
 </section>
