HURTBOX et HITBOX multiple

--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -37,9 +37,9 @@
 
         <div id="LAY__Battle_Character_" class="outputLayer Battle__Character">
             <img id="SPT__Battle_Character_Sprite_" class="outputSprite --change Battle__Character_Sprite" />
-            <div id="LAY__Training_HurtBox_" class="outputLayer --change Training__HurtBox"></div>
-            <div id="LAY__Training_HitBox_" class="outputLayer --change Training__HitBox"></div>
-            <div id="LAY__Training_PositionBox_" class="outputLayer --change Training__PositionBox"></div>
+            <div id="LAY__Training_HurtBox_" class="outputLayer --change Training__Box Training__HurtBox"></div>
+            <div id="LAY__Training_HitBox_" class="outputLayer --change Training__Box Training__HitBox"></div>
+            <div id="LAY__Training_PositionBox_" class="outputLayer --change Training__Box Training__PositionBox"></div>
         </div>
     </div>
 </section>
