Modification logique KI

--- a/src/pages/index/_scenes/_training.html
+++ b/src/pages/index/_scenes/_training.html
@@ -13,8 +13,12 @@
     <nav id="LAY__Training_Menu_Parameters" class="outputLayer Menu__Layer Training__Menu_Parameters">
         <ul id="LAY__Training_Menu_Parameters_Player" class="outputLayer">
             <li class="Training__Menu_Parameters_Number">Player #</li>
-            <li id="LAY__Training_Menu_Parameters_LifeKi_" class="outputLayer --change Training__Button">
-                <span>Life / Ki</span>
+            <li id="LAY__Training_Menu_Parameters_Life_" class="outputLayer --change Training__Button">
+                <span>Life</span>
+                <span class="outputText --change"></span>
+            </li>
+            <li id="LAY__Training_Menu_Parameters_Ki_" class="outputLayer --change Training__Button">
+                <span>Ki</span>
                 <span class="outputText --change"></span>
             </li>
             <li id="LAY__Training_Menu_Parameters_RegenLife_" class="outputLayer --change Training__Button">
