COMMAND LIST dans le menu TRAINING

--- a/src/pages/index/_scenes/_training.html
+++ b/src/pages/index/_scenes/_training.html
@@ -5,6 +5,7 @@
             <li id="TXT__Training_Menu_Display" class="outputText">Display</li>
         </ul>
         <ul>
+            <li id="TXT__Training_Menu_List" class="outputText">Command list</li>
             <li id="TXT__Training_Menu_Continue" class="outputText">Continue</li>
             <li id="TXT__Training_Menu_Quit" class="outputText">Quit</li>
         </ul>
@@ -57,5 +58,25 @@
         <ul>
             <li id="LAY__Training_Menu_Display_Return" class="outputText --outputCreated">Return</li>
         </ul>
+    </nav>
+
+    <nav id="LAY__Training_Menu_List" class="outputLayer Menu__Layer Training__Menu_List">
+        <div class="Training__Menu_List_Sprite" >
+            <img id="SPT__Training_Menu_List" class="outputSprite" />
+        </div>
+        <div id="LAY__Training_Menu_List_Character_" class="outputLayer Menu__Layer Training__Menu_List_Character">
+            <ul class="Training__Menu_List_Character_Command">
+                <li class="Training__Menu_List_Name"></li>
+            </ul>
+            <ul>
+                <li id="LAY__Training_Menu_List_Return_" class="outputText --change --outputCreated">Return</li>
+            </ul>
+        </div>
+        <!-- Pattern COMMAND -->
+        <li id="LAY__Training_Menu_List_Command_" class="outputLayer Training__Button">
+            <span class="Training__Button_Option Training__Menu_List_Ki"></span>
+            <span class="Training__Button_Label Training__Menu_List_Command"></span>
+            <span class="Training__Button_Option Training__Menu_List_Button"></span>
+        </li>
     </nav>
 </section>
