--- a/src/pages/index/_scenes/settings.html
+++ b/src/pages/index/_scenes/settings.html
@@ -1,8 +1,8 @@
 <section id="CTX__Settings" class="outputContext">
     <h1>Settings</h1>
-    <div class="Settings__Players">
-        <div id="LAY__Settings_Player_" class="outputLayer Settings__Player">
-            <h2 class="Settings__Player_Number">Player #</h2>
+    <div class="Settings__Controllers">
+        <div id="LAY__Settings_Controller_" class="outputLayer Settings__Controller">
+            <h2 class="Settings__Controller_Number"></h2>
             <ul class="Settings__Buttons"></ul>
             <ul class="Settings__Actions">
                 <li id="TXT__Settings_Return_" class="outputText --change">Return</li>
