Possibilité de jouer avec des GAMEPADS

--- a/src/pages/index/_scenes/settings.html
+++ b/src/pages/index/_scenes/settings.html
@@ -2,6 +2,7 @@
     <h1>Settings</h1>
     <div class="Settings__Controllers">
         <div id="LAY__Settings_Controller_" class="outputLayer Settings__Controller">
+            <img class="Settings__Controller_Sprite" />
             <h2 class="Settings__Controller_Number"></h2>
             <ul class="Settings__Buttons"></ul>
             <ul class="Settings__Actions">
