BUG décallage de SIDE à SELECT STORE des paramètres de TRAINING

--- a/src/pages/index/_scenes/side.html
+++ b/src/pages/index/_scenes/side.html
@@ -1,8 +1,8 @@
 <section id="CTX__Side" class="outputContext">
-    <h1 id="TXT__Side_Name" class="outputText"></h1>
+    <h1 id="TXT__Side_Name" class="outputText">Side</h1>
     <div class="Side__Players">
         <div id="LAY__Side_Player_" class="outputLayer Side__Player">
-            <h3 id="TXT__Side_Player_State_" class="outputText --change Side__Player_State"></h3>
+            <h3 id="TXT__Side_Player_State_" class="outputText --change Side__Player_State">Waiting ...</h3>
             <h2 class="Side__Player_Number">Player #</h2>
         </div>
         <div id="LAY__Side_Empty" class="outputLayer Side__Empty"></div>
