--- a/src/pages/index/_scenes/select.html
+++ b/src/pages/index/_scenes/select.html
@@ -1,10 +1,10 @@
 <section id="CTX__Select" class="outputContext">
-    <h1 id="TXT__Select_Name" class="outputText"></h1>
+    <h1 id="TXT__Select_Name" class="outputText">Select</h1>
     <div class="Select__Players">
         <div id="LAY__Select_Player_" class="outputLayer Select__Player">
-            <img id="SPT__Select_Character_" class="outputSprite --change Select__Player_Character_Sprite" />
-            <h2 id="TXT__Select_Character_" class="outputText --change Select__Player_Character_Name"></h2>
-            <h3 id="TXT__Select_Player_" class="outputText --change Select__Player_Number"></h3>
+            <img id="SPT__Select_Character_" class="outputSprite --change Select__Player_Character_Sprite" height="200" width="200"/>
+            <h2 id="TXT__Select_Character_" class="outputText --change Select__Player_Character_Name">Character</h2>
+            <h3 id="TXT__Select_Player_" class="outputText --change Select__Player_Number">Player #</h3>
         </div>
         <div class="Select__Stages">
             <div id="LAY__Select_Stage" class="outputLayer"></div>
