Bar de KI et LIFE séparé dans HTML

--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -7,7 +7,8 @@
                 <div id="LAY__Battle_HUD_" class="outputLayer Battle__HUD">
                     <img id="SPT__Battle_HUD_Sprite_" class="outputSprite --change Battle__HUD_Sprite" />
                     <div class="Battle__HUD_Character">
-                        <div id="LAY__Battle_HUD_Bar_" class="outputLayer --change Battle__HUD_Character_Bars"></div>
+                        <div id="LAY__Battle_HUD_Life_" class="outputLayer --change Battle__HUD_Character_Life"></div>
+                        <div id="LAY__Battle_HUD_Ki_" class="outputLayer --change Battle__HUD_Character_Ki"></div>
                         <h2 id="TXT__Battle_HUD_Name_" class="outputText --change Battle__HUD_Character_Name"></h2>
                         <h3 id="TXT__Battle_HUD_Number_" class="outputText --change Battle__HUD_Character_Number"></h3>
                         <div id="LAY__Training_Animation_" class="outputLayer --change Training__Animation"></div>
