Class mère ENTITY pour les éléments en combat

--- a/src/pages/index/_scenes/battle_BCK.html
+++ b/src/pages/index/_scenes/battle_BCK.html
@@ -36,8 +36,8 @@
             <div id="LAY__Training_History_2" class="outputLayer Training__History"></div>
         </div>
 
-        <div id="LAY__Battle_Entity_" class="outputLayer Battle__Entity">
-            <img id="SPT__Battle_Entity_Sprite_" class="outputSprite --change Battle__Entity_Sprite" />
+        <div id="LAY__Battle_Character_" class="outputLayer Battle__Character">
+            <img id="SPT__Battle_Character_Sprite_" class="outputSprite --change Battle__Character_Sprite" />
             <div id="LAY__Training_HurtBox_" class="outputLayer --change Training__Box Training__HurtBox"></div>
             <div id="LAY__Training_HitBox_" class="outputLayer --change Training__Box Training__HitBox"></div>
             <div id="LAY__Training_PositionBox_" class="outputLayer --change Training__Box Training__PositionBox"></div>
