Ajout du RESTART en TRAINING avec SIDE

--- a/src/pages/index/_scenes/_training.html
+++ b/src/pages/index/_scenes/_training.html
@@ -3,9 +3,10 @@
         <ul>
             <li id="TXT__Training_Menu_Parameters" class="outputText">Parameters</li>
             <li id="TXT__Training_Menu_Display" class="outputText">Display</li>
+            <li id="TXT__Training_Menu_List" class="outputText">Command list</li>
         </ul>
         <ul>
-            <li id="TXT__Training_Menu_List" class="outputText">Command list</li>
+            <li id="TXT__Training_Menu_Restart" class="outputText">Restart</li>
             <li id="TXT__Training_Menu_Continue" class="outputText">Continue</li>
             <li id="TXT__Training_Menu_Quit" class="outputText">Quit</li>
         </ul>
@@ -31,8 +32,14 @@
                 <span class="outputText --change"></span>
             </li>
         </ul>
-        <ul class="Training__Menu_Parameters_Return">
-            <li id="LAY__Training_Menu_Parameters_Return" class="outputText --outputCreated">Return</li>
+        <ul class="Training__Menu_Parameters_All">
+            <li id="LAY__Training_Menu_Parameters_Side" class="outputLayer --uncreate --outputCreated Training__Button">
+                <span>Restart side</span>
+                <span class="outputText --uncreate --outputCreated"></span>
+            </li>
+        </ul>
+        <ul>
+            <li id="LAY__Training_Menu_Parameters_Return" class="outputText --uncreate --outputCreated">Return</li>
         </ul>
     </nav>
 
