--- a/src/pages/index/_scenes/select.html
+++ b/src/pages/index/_scenes/select.html
@@ -3,12 +3,8 @@
     <div class="Select__Players">
         <div id="LAY__Select_Player_" class="outputLayer Select__Player">
             <img id="SPT__Select_Character_" class="outputSprite --change Select__Player_Character_Sprite" height="200" width="200"/>
-            <h2 id="TXT__Select_Character_" class="outputText --change Select__Player_Character_Name">Character</h2>
+            <h2 id="TXT__Select_Character_" class="outputText --change Select__Player_Character_Name">Character <i>Color</i></h2>
             <h3 id="TXT__Select_Player_" class="outputText --change Select__Player_Number">Player #</h3>
-        </div>
-        <div class="Select__Stages">
-            <div id="LAY__Select_Stage" class="outputLayer"></div>
-            <h3 id="TXT__Select_Stage" class="outputText Select__Stage_Name"></h3>
         </div>
     </div>
     <div id="LAY__Select_Character" class="outputLayer Select__Characters"></div>
