--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -7,7 +7,10 @@
                 <div id="LAY__Battle_HUD_" class="outputLayer Battle__HUD">
                     <img id="SPT__Battle_HUD_Sprite_" class="outputSprite --change Battle__HUD_Sprite" />
                     <div class="Battle__HUD_Character">
-                        <div id="LAY__Battle_HUD_Life_" class="outputLayer --change Battle__HUD_Character_Life"></div>
+                        <div id="LAY__Battle_HUD_Life_" class="outputLayer --change Battle__HUD_Character_Life">
+                            <div id="LAY__Battle_HUD_Bar_Life_" class="outputLayer --change Battle__HUD_Bar_Life"></div>
+                            <div id="LAY__Battle_HUD_Bar_Lose_" class="outputLayer --change Battle__HUD_Bar_Lose"></div>
+                        </div>
                         <div id="LAY__Battle_HUD_Ki_" class="outputLayer --change Battle__HUD_Character_Ki"></div>
                         <h2 id="TXT__Battle_HUD_Name_" class="outputText --change Battle__HUD_Character_Name"></h2>
                         <h3 id="TXT__Battle_HUD_Number_" class="outputText --change Battle__HUD_Character_Number"></h3>
