Gestion du TIMER Revue animation fin de match

--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -4,7 +4,7 @@
         <div class="Battle__Interface_Wrapper">
 
             <div class="Battle__HUDs">
-                <div id="TXT__Battle_Timer" class="outputLayer Battle__Timer">00</div>
+                <div id="TXT__Battle_Timer" class="outputText Battle__Timer">99</div>
                 <div id="LAY__Battle_HUD_" class="outputLayer Battle__HUD">
                     <div class="Battle__HUD_Character">
                         <h3 id="TXT__Battle_HUD_Number_" class="outputText --change Battle__HUD_Character_Number"></h3>
