Gestion de rematch en VERSUS

--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -31,7 +31,10 @@
                 <span id="TXT__Battle_Combo_Text_1" class="outputText Battle__Combo_Text"></span>
             </div>
 
-            {% include "index/_scenes/_training.html" %}
+            <section class="Battle__Menu">
+                {% include "index/_scenes/_training.html" %}
+                {% include "index/_scenes/_rematch.html" %}
+            </div>
         </div>
     </div>
 
