Gestion des ROUNDS

--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -13,6 +13,7 @@
                             <div id="LAY__Battle_HUD_Bar_Life_" class="outputLayer --change Battle__HUD_Bar_Life"></div>
                             <div id="LAY__Battle_HUD_Bar_Lose_" class="outputLayer --change Battle__HUD_Bar_Lose"></div>
                         </div>
+                        <div id="LAY__Battle_HUD_Round_" class="outputLayer --change Battle__HUD_Character_Round"></div>
                         <div id="LAY__Training_Animation_" class="outputLayer --change Training__Animation"></div>
                         <div id="LAY__Battle_HUD_Ki_" class="outputLayer --change Battle__HUD_Character_Ki">
                             <div id="TXT__Battle_HUD_Ki_Number_" class="outputText --change Battle__HUD_Ki_Number"></div>
@@ -24,7 +25,7 @@
             </div>
             <div class="Battle__Info">
                 <img id="SPT__Battle_Info_Sprite" class="outputSprite Battle__Info_Sprite" />
-                <span id="TXT__Battle_Info_Text" class="outputText Battle__Info_Text --text-border">
+                <span id="TXT__Battle_Info_Text" class="outputText Battle__Info_Text">
             </div>
             <div class="Battle__Combo">
                 <span id="TXT__Battle_Combo_Text_2" class="outputText Battle__Combo_Text"></span>
