--- a/src/pages/index/_scenes/setting.html
+++ b/src/pages/index/_scenes/setting.html
@@ -2,6 +2,13 @@
     <h1>Settings</h1>
     <nav id="LAY__Setting" class="outputLayer">
         <ul>
+            <li>Battle</li>
+            <li id="LAY__Setting_Round" class="outputLayer Setting__Button">
+                <span class="Setting__Round_Name">First to</span>
+                <span class="outputText"></span>
+            </li>
+        </ul>
+        <ul>
             <li>Input</li>
             <li id="TXT__Setting_Input" class="outputText">Controller configuration</li>
         </ul>
