--- a/src/pages/index/_scenes/_training.html
+++ b/src/pages/index/_scenes/_training.html
@@ -45,16 +45,19 @@
 
 <nav id="LAY__Training_Menu_Display" class="outputLayer Menu__Layer Training__Menu Training__Menu_Display">
     <ul>
-        <li id="LAY__Training_Menu_Display_Input" class="outputLayer Training__Button">
-            <span>Inputs history</span>
+        <li>Frame Data</li>
+        <li id="LAY__Training_Menu_Display_Data" class="outputLayer Training__Button">
+            <span>Command details</span>
             <span class="outputText"></span>
         </li>
         <li id="LAY__Training_Menu_Display_Box" class="outputLayer Training__Button">
             <span>Box visibility</span>
             <span class="outputText"></span>
         </li>
-        <li id="LAY__Training_Menu_Display_Animations" class="outputLayer Training__Button">
-            <span>Animations timeline</span>
+    </ul>
+    <ul>
+        <li id="LAY__Training_Menu_Display_Input" class="outputLayer Training__Button">
+            <span>Inputs history</span>
             <span class="outputText"></span>
         </li>
         <li id="LAY__Training_Menu_Display_Framerate" class="outputLayer Training__Button">
@@ -63,7 +66,7 @@
         </li>
     </ul>
     <ul>
-        <li id="LAY__Training_Menu_Display_Return" class="outputText --outputCreated">Return</li>
+        <li id="LAY__Training_Menu_Display_Return" class="outputText">Return</li>
     </ul>
 </nav>
 
