--- a/src/pages/index/_scenes/_training.html
+++ b/src/pages/index/_scenes/_training.html
@@ -6,6 +6,9 @@
     </ul>
     <ul>
         <li id="TXT__Training_Menu_Select" class="outputText">Select character</li>
+        <li id="TXT__Training_Menu_Stage" class="outputText">Select stage</li>
+    </ul>
+    <ul>
         <li id="TXT__Training_Menu_Restart" class="outputText">Restart</li>
         <li id="TXT__Training_Menu_Continue" class="outputText">Continue</li>
         <li id="TXT__Training_Menu_Quit" class="outputText">Quit</li>
