--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -26,33 +26,24 @@
                 <span id="TXT__Battle_Combo_Text_2" class="outputText Battle__Combo_Text">0 hit !<i>0 damages</i></span>
                 <span id="TXT__Battle_Combo_Text_1" class="outputText Battle__Combo_Text">0 hit !<i>0 damages</i></span>
             </div>
-            <div class="Training__Data">
-                <div id="LAY__Training_Data_" class="outputLayer Menu__Layer Training__Data_Character">
-                    <ul>
-                        <li class="Training__Data_Info">
-                            <span>Damages</span>
-                            <span class="outputText --change"></span>
-                        </li>
-                        <li  class="Training__Data_Info">
-                            <span>Frames</span>
-                            <span class="outputText --change"></span>
-                        </li>
-                        <li  class="Training__Data_Info">
-                            <span>Advantage</span>
-                            <span class="outputText --change"></span>
-                        </li>
-                        <li id="LAY__Training_Animation_" class="outputLayer --change Training__Animation"></li>
-                    </ul>
-                </div>
-            </div>
             <div class="Battle__Info">
                 <img id="SPT__Battle_Info_Sprite" class="outputSprite Battle__Info_Sprite" />
                 <span id="TXT__Battle_Info_Text" class="outputText Battle__Info_Text">
             </div>
+            {% include "index/_scenes/_training/_data.html" %}
 
             <section class="Battle__Menu">
-                {% include "index/_scenes/_training.html" %}
-                {% include "index/_scenes/_rematch.html" %}
+                <nav id="LAY__Battle_Menu" class="outputLayer Menu__Layer Battle__Menu_Principal">
+                    <ul>
+                        <li id="TXT__Battle_Menu_Rematch" class="outputText">Rematch</li>
+                        <li id="TXT__Battle_Menu_Select" class="outputText">Select character</li>
+                        <li id="TXT__Battle_Menu_Stage" class="outputText">Select stage</li>
+                        <li id="TXT__Battle_Menu_Quit" class="outputText">Quit</li>
+                    </ul>
+                </nav>
+                {% for fw_training in FW.content.training %}
+                    {% include "index/_scenes/_training/" + fw_training %}
+                {% endfor %}
             </div>
         </div>
     </div>
