--- a/src/pages/index/_scenes/_training/_dummy.html
+++ b/src/pages/index/_scenes/_training/_dummy.html
@@ -3,6 +3,32 @@
         <li>In development !</li>
     </ul>
     <ul>
+        <li id="LAY__Training_Menu_Dummy_Controller" class="outputLayer Training__Button">
+            <span>Controller</span>
+            <span class="outputText"></span>
+        </li>
+        <li id="LAY__Training_Menu_Dummy_Stance" class="outputLayer Training__Button">
+            <span>Stance</span>
+            <span class="outputText"></span>
+        </li>
+        <li id="LAY__Training_Menu_Dummy_Guard" class="outputLayer Training__Button">
+            <span>Guard</span>
+            <span class="outputText"></span>
+        </li>
+        <li id="LAY__Training_Menu_Dummy_TechThrow" class="outputLayer Training__Button">
+            <span>Tech throw</span>
+            <span class="outputText"></span>
+        </li>
+        <li id="LAY__Training_Menu_Dummy_Counter" class="outputLayer Training__Button">
+            <span>Counter</span>
+            <span class="outputText"></span>
+        </li>
+        <li id="LAY__Training_Menu_Dummy_Reversal" class="outputLayer Training__Button">
+            <span>Reversal</span>
+            <span class="outputText"></span>
+        </li>
+    </ul>
+    <ul>
         <li id="TXT__Training_Menu_Dummy_Return" class="outputText">Return</li>
     </ul>
 </nav>
