Ajout du RECORD dans le DUMMY

--- a/src/pages/index/_scenes/_training/_dummy.html
+++ b/src/pages/index/_scenes/_training/_dummy.html
@@ -27,6 +27,10 @@
             <span>Reversal</span>
             <span class="outputText"></span>
         </li>
+        <li id="LAY__Training_Menu_Dummy_Record" class="outputLayer Training__Button">
+            <span>Record</span>
+            <span class="outputText"></span>
+        </li>
     </ul>
     <ul>
         <li id="TXT__Training_Menu_Dummy_Return" class="outputText">Return</li>
