BUG pour la GUARD DUMMY avec les ENTITY Optimisation de INPUTBUFFERDUMMY

--- a/src/pages/index/_scenes/dev.html
+++ b/src/pages/index/_scenes/dev.html
@@ -2,14 +2,24 @@
     <nav id="LAY__Dev_Menu" class="outputLayer">
         <ul></ul>
     </nav>
-    <section id="LAY__Dev_Content" class="outputLayer">
-        <section id="LAY__Dev_Frame_" class="outputLayer Dev__Frame">
-            <nav id="LAY__Dev_Frame_Colors_" class="outputLayer --change Dev__Frame_Colors">
+    <section class="Dev__Wrapper">
+        <section class="Dev__Menu">
+            <nav class="--menu">
                 <ul>
-                    <li>Colors</li>
+                    <li class="--selected">Frames List</li>
                 </ul>
             </nav>
         </section>
+        <section id="LAY__Dev_Content" class="outputLayer">
+            <section id="LAY__Dev_Frame_" class="outputLayer Dev__Frame">
+                <nav id="LAY__Dev_Frame_Colors_" class="outputLayer --change Dev__Frame_Colors --menu">
+                    <ul>
+                        <li>Colors</li>
+                    </ul>
+                </nav>
+            </section>
+        </section>
+        <!-- Layer pattern -->
         <div id="LAY__Dev_Frame_Entity_" class="outputLayer Dev__Frame_Entity">
             <div id="LAY__Dev_Frame_Entity_HurtBox_" class="outputLayer --change Dev__Frame_Entity_Box Dev__Frame_Entity_HurtBox"></div>
             <div id="LAY__Dev_Frame_Entity_HitBox_" class="outputLayer --change Dev__Frame_Entity_Box Dev__Frame_Entity_HitBox"></div>
