Encart d'information lors du LOADING et TITLE

--- a/src/pages/index/_scenes/loading.html
+++ b/src/pages/index/_scenes/loading.html
@@ -3,5 +3,15 @@
         DBZ-Versus
         <span>{{ FW.version }}.{{ FW.date }}.{{ FW.time }}</span>
     </h1>
+    <div class="Loading__Information">
+        <h2>This open source project is still under development !</h2>
+        <p>
+            If you encountered an issue or would like to give me feedback to improve this project,<br/>
+            please contact me via its <a href="https://github.com/de-sign/DBZ-Versus/issues" target="_blank">Github repository</a>.
+        </p>
+        <p>
+            <b>Thank you for playing and have a good game !</b>
+        </p>
+    </div>
     <div id="LAY__LoadingStep" class="outputLayer"></div>
 </section>
