--- a/src/pages/index/_scenes/title.html
+++ b/src/pages/index/_scenes/title.html
@@ -3,6 +3,16 @@
         DBZ-Versus
         <span>{{ FW.version }}.{{ FW.date }}.{{ FW.time }}</span>
     </h1>
+    <div class="Title__Information">
+        <h2>This open source project is still under development !</h2>
+        <p>
+            If you encountered an issue or would like to give me feedback to improve this project,<br/>
+            please contact me via its <a href="https://github.com/de-sign/DBZ-Versus/issues" target="_blank">Github repository</a>.
+        </p>
+        <p>
+            <b>Thank you for playing and have a good game !</b>
+        </p>
+    </div>
     <nav class="Menu__Layer">
         <ul>
             <li>Press <span class="Helper__Button">ENTER</span>or any gamepad button</li>
