--- a/src/pages/index/page.html
+++ b/src/pages/index/page.html
@@ -5,7 +5,22 @@
     {% for fw_scenes in FW.content.scenes %}
         {% include "index/_scenes/" + fw_scenes %}
     {% endfor %}
+
     <section id="LAY__Helper" class="outputLayer Helper__Layer">
         <div id="LAY__Helper_Wrapper" class="outputLayer Helper__Wrapper"></div>
+    </section>
+
+    <section id="LAY__Alert" class="outputLayer Alert__Layer">
+        <div id="LAY__Alert_Wrapper" class="outputLayer Alert__Wrapper">
+            <b class="Alert__Close">X</b>
+            <h1>Oops !</h1>
+            <h2>I believe there is an issue ...</h2>
+            <div class="Alert__Information">
+                <p>
+                    Please contact me via <a href="https://github.com/de-sign/DBZ-Versus/issues" target="_blank">Github repository</a> of project,<br/>
+                    giving me the context and the following error text&nbsp;:
+                </p>
+            </div>
+        </div>
     </section>
 {% endblock %}
